Move asterisk to separate span, letter spacing fix for heading styles, fix alert noisiness

--- a/assets/src/objects/_form.scss
+++ b/assets/src/objects/_form.scss
@@ -136,12 +136,11 @@
 
 /* Required */
 
-legend[data-required] > span:first-child::after,
-[data-label][data-required] > span:first-child::after,
-[data-required] > [data-label] > span:first-child::after {
+legend[data-required] > span:first-child [data-required-icon]::after,
+[data-label][data-required] > span:first-child [data-required-icon]::after,
+[data-required] > [data-label] > span:first-child [data-required-icon]::after {
   content: " *";
   color: var(--negative-color);
-  speak: none;
 }
 
 /* Controls */
