--- a/assets/src/text/_sizes.scss
+++ b/assets/src/text/_sizes.scss
@@ -25,6 +25,15 @@ h6,
   color: var(--heading-color);
 }
 
+.t-h2-l,
+.t-h2,
+.t-h3,
+.t-h4,
+.t-h5,
+.t-h6 {
+  letter-spacing: normal;
+}
+
 h2,
 h3,
 .t-h2-l,
